fix: fix header close positioning z-index

--- a/wp-content/themes/jnews-child/sidebar-tips.css
+++ b/wp-content/themes/jnews-child/sidebar-tips.css
@@ -5,7 +5,11 @@
 }
 
 .tsd-donate-header-close {
-    position: absolute; right: 20px; top: 20px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 999;
+    color: black;
 }
 
 /* tips */
